# a2a-mesh

./: .gitignore  A2A_STATUS.md  README.md  benchmark.py  bridge_delegate.py  check_nova.sh  cli.py  deploy.sh  generate_certs.py  install.sh  local_store_nova.db-shm  local_store_nova.db-wal  mesh_config.yaml  mesh_config.yaml.bak.20260722_071011  mesh_config_lennie.yaml  mesh_config_morzsa.yaml  mesh_config_nova.yaml  mesh_config_runa.yaml  node.py  node.py.bak2  pyproject.toml  start_lennie.bat
backups/: dashboard.py.bak  file_transfer.py.bak  node.py.bak  p2p_transport.py.bak
certs/: a2a-mesh-ca.crt  a2a-mesh-ca.srl  morzsa.crt  morzsa.csr  morzsa_ext.cnf  nova.crt  nova.csr  nova_ext.cnf  runa.crt  runa.csr  runa_ext.cnf
certs_backup_20260722_070715/: morzsa.crt  nova_ext.cnf  runa.csr
core/: __init__.py  ack.py  agent_card.py  async_db.py  auth.py  auto_steer.py  auto_updater.py  config.py  dashboard.html  dashboard.py  dedup.py  delegation.py  diagnostics.py  encryption.py  exceptions.py  framing.py  gossipsub.py  local_store.py  memory_sync.py  message.py  offline_queue.py  peer_discovery.py  plugin_base.py  plugin_loader.py  registry.py  router.py  topology.html  topology.py  workflow.py
discovery/: __init__.py  mdns.py  udp_broadcast.py
tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_dashboard_api.py  test_delegation.py  test_e2e.py  test_file_transfer.py  test_framing.py  test_local_store.py  test_p2p_fixes.py  test_peer_status.py  test_registry.py  test_router.py  test_topology.py
transports/: ble_transport.py  http_transport.py  (+2 more)
(+97 files in other folders)
